fix(front): Fix layout of `PhotoDetailed` buttons
Fix prev/next button in narrow layout shifting to center when other is
not present

--- a/src/Pages/PhotoDetailed.module.css
+++ b/src/Pages/PhotoDetailed.module.css
@@ -12,6 +12,11 @@
   align-items: center;
   position: relative;
   width: 100%;
+
+  > a.hidden {
+    display: hidden;
+    pointer-events: none;
+  }
 }
 
 @media screen and (min-width: 50rem) {
